--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 CI=false
-REACT_APP_GAME_NAME=Reactle
-REACT_APP_GAME_DESCRIPTION=A daily word game
+REACT_APP_GAME_NAME=Subredditle
+REACT_APP_GAME_DESCRIPTION=Wordle for subreddits
 REACT_APP_LOCALE_STRING=
 MONGODB_URI=
 PORT=3001
